--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "cordova-sms-plugin": "^1.0.0",
     "core-js": "^2.5.4",
     "ionic-angular": "^3.9.9",
+    "node-sass": "^4.13.1",
+    "os": "^0.1.1",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
